fix: font size too large

--- a/src/components/styles/banner.scss
+++ b/src/components/styles/banner.scss
@@ -18,7 +18,7 @@
     top: 60%;
     transform: translateY(-50%);
     position: relative;
-    font-size: 13rem;
+    font-size: 10rem;
     font-weight: bolder;
     text-align: center;
   }
